--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -1,12 +1,16 @@
+on early-init 
+     start adbd
+     write /sys/module/musb_hdrc/parameters/kernel_init_done 1
+
+on fs
+    wait /dev/block/platform/bootdevice/
+    symlink /dev/block/platform/bootdevice/ /dev/block/bootdevice
+    write /sys/class/power_supply/usb/otg_switch 1
+    write /sys/class/oplus_chg/usb/otg_switch 1
+
 on init
     setprop sys.usb.configfs 1
-    setprop sys.usb.ffs.aio_compat 0
-
-on fs && property:ro.debuggable=0
-    # distinguish USB shoulde connect or not, i.e. CDP vs SDP
-    write /sys/class/udc/musb-hdrc/device/cmode 2
-    # set charging free due to it wait for USB activation
-    start adbd
+    setprop sys.usb.ffs.aio_compat 1
 
 on post-fs
     # Support A/B feature for EMMC and UFS boot region
@@ -15,7 +19,3 @@ on post-fs
     symlink /dev/block/mmcblk0boot0 /dev/block/platform/bootdevice/by-name/preloader_a
     symlink /dev/block/mmcblk0boot1 /dev/block/platform/bootdevice/by-name/preloader_b
 
-service init-recovery-mt6768-sh /init.recovery.mt6768.sh
-    user root
-    group root
-    seclabel u:r:recovery:s0 
